# genome-minimizer-2

./: .gitignore  README.md  main.py  pyproject.toml  run_paper_ana.sh
src/genome_minimizer_2/explore_data/: binary_converter.py  data_exploration.py  extract_essential_genes.py
src/genome_minimizer_2/minimizer/: minimizer_2.py
src/genome_minimizer_2/training/: model.py
src/genome_minimizer_2/training/evaluation/: metrics.py  visualise.py
src/genome_minimizer_2/training/training/: loss_components.py  trainer.py
src/genome_minimizer_2/utils/: custom_config.py  directories.py  experiments.py  extras.py
