[project]
name = "genome-minimizer-2"
version = "0.1.0"
description = ""
authors = [
    {name = "stacyshcherbakova",email = "stacyshcherbakova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "pandas (==2.0.3)",
    "numpy (==1.24.4)",
    "torch (==2.2.2)",
    "torchaudio (==2.2.2)",
    "torchvision (==0.17.2)",
    "scikit-learn (==1.3.2)",
    "matplotlib (==3.7.5)",
    "seaborn (==0.13.2)",
    "scipy (==1.10.1)",
    "biopython (>=1.85,<2.0)",
]

[tool.poetry]
packages = [{include = "genome_minimizer_2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
